--- a/Identity.Domain/Identity.Domain.csproj
+++ b/Identity.Domain/Identity.Domain.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Zack.Commons" Version="1.1.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlogJWT\BlogJWT.csproj" />
+  </ItemGroup>
+
 </Project>
