--- a/RedisHelper/RedisHelper.csproj
+++ b/RedisHelper/RedisHelper.csproj
@@ -7,13 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
     <PackageReference Include="Zack.Commons" Version="1.1.11" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BlogJWT\BlogJWT.csproj" />
-    <ProjectReference Include="..\RedisHelper\RedisHelper.csproj" />
   </ItemGroup>
 
 </Project>
