--- a/RedisHelper/RedisHelper.csproj
+++ b/RedisHelper/RedisHelper.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
     <PackageReference Include="Zack.Commons" Version="1.1.11" />
   </ItemGroup>
