--- a/BlogService.WebApi/appsettings.json
+++ b/BlogService.WebApi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MySqlConStr": "Server=localhost;Database=blog_d1;Uid=root;Pwd=15550239;",
+  "Redis": "localhost:6379,defaultDatabse-0",
+  "JWT": {
+    "Issuer": "localhost", //后续要改为服务器ip
+    "Audience": "*",
+    "key": "AnAnBaiBai_Love_Forever_dcsdciujewfcwiue_BaiBaiAnAn",
+    "ExpireSeconds": "600"
+  }
 }
