--- a/BlogService.WebApi/BlogService.WebApi.csproj
+++ b/BlogService.WebApi/BlogService.WebApi.csproj
@@ -10,12 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ApiJsonResult\ApiJsonResult.csproj" />
+    <ProjectReference Include="..\BlogService.Domain\BlogService.Domain.csproj" />
+    <ProjectReference Include="..\BlogService.Infrastructure\BlogService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
