Preliminary Complete BlogService

--- a/BlogService.Domain/BlogService.Domain.csproj
+++ b/BlogService.Domain/BlogService.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApiJsonResult\ApiJsonResult.csproj" />
     <ProjectReference Include="..\BlogJWT\BlogJWT.csproj" />
     <ProjectReference Include="..\Commons\BlogDomainCommons.csproj" />
   </ItemGroup>
