--- a/SearchService.WebApi/appsettings.json
+++ b/SearchService.WebApi/appsettings.json
@@ -6,8 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "MySqlConStr": "Server=localhost;Database=blog_d1;Uid=root;Pwd=15550239;",
-  "Redis": "localhost:6379,defaultDatabse-0",
   "JWT": {
     "Issuer": "localhost", //后续要改为服务器ip
     "Audience": "*",
@@ -20,5 +18,10 @@
     "UserName": "admin",
     "Password": "15550239",
     "ExchangerName": "BlogEventExchanger"
+  },
+  "ElasticSearchOptions": {
+    "Uri": "http://localhost:9200",
+    "UserName": "elastic",
+    "Password": "15550239"
   }
 }
