--- a/SearchService.Infrastructure/SearchService.Infrastructure.csproj
+++ b/SearchService.Infrastructure/SearchService.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="Zack.Commons" Version="1.1.11" />
   </ItemGroup>
