--- a/SearchService.WebApi/SearchService.WebApi.csproj
+++ b/SearchService.WebApi/SearchService.WebApi.csproj
@@ -5,21 +5,24 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
-    <UserSecretsId>638be2a4-ba10-4dcb-8a3e-2efa8673e2fc</UserSecretsId>
+    <UserSecretsId>81b9746c-5ed2-4f62-a728-fdf00044df67</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ApiJsonResult\ApiJsonResult.csproj" />
+    <ProjectReference Include="..\BlogJWT\BlogJWT.csproj" />
     <ProjectReference Include="..\BlogRabbitHelper\BlogRabbitHelper.csproj" />
-    <ProjectReference Include="..\BlogService.Domain\BlogService.Domain.csproj" />
-    <ProjectReference Include="..\BlogService.Infrastructure\BlogService.Infrastructure.csproj" />
+    <ProjectReference Include="..\SearchService.Domain\SearchService.Domain.csproj" />
+    <ProjectReference Include="..\SearchService.Infrastructure\SearchService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
