fix bug and revise host

--- a/IdentityService.WebApi/appsettings.json
+++ b/IdentityService.WebApi/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "MySqlConStr": "Server=localhost;Database=blog_d1;Uid=root;Pwd=15550239;",
-  "Redis": "localhost:6379,defaultDatabse-0",
+  "MySqlConStr": "Server=47.109.141.21;Port=3306;Database=blog_d1;Uid=root;Pwd=15550239",
+  "Redis": "47.109.141.21:6379,defaultDatabse-0,password=15550239",
   "JWT": {
-    "Issuer": "localhost", //后续要改为服务器ip
+    "Issuer": "47.109.141.21", //后续要改为服务器ip
     "Audience": "*",
     "key": "AnAnBaiBai_Love_Forever_dcsdciujewfcwiue_BaiBaiAnAn",
     "ExpireSeconds": "600"
