--- a/BlogService.WebApi/appsettings.json
+++ b/BlogService.WebApi/appsettings.json
@@ -6,17 +6,17 @@
     }
   },
   "AllowedHosts": "*",
-  "MySqlConStr": "Server=localhost;Database=blog_d1;Uid=root;Pwd=15550239;",
-  "Redis": "localhost:6379,defaultDatabse-0",
+  "MySqlConStr": "Server=47.109.141.21;Port=3306;Database=blog_d1;Uid=root;Pwd=15550239",
+  "Redis": "47.109.141.21:6379,defaultDatabse-0,password=15550239",
   "JWT": {
-    "Issuer": "localhost", //后续要改为服务器ip
+    "Issuer": "47.109.141.21", //后续要改为服务器ip 47.109.141.21
     "Audience": "*",
     "key": "AnAnBaiBai_Love_Forever_dcsdciujewfcwiue_BaiBaiAnAn",
     "ExpireSeconds": "600"
   },
   "RabbitMqOptions": {
     "Port": 5672,
-    "HostName": "localhost",
+    "HostName": "47.109.141.21",
     "UserName": "admin",
     "Password": "15550239",
     "ExchangerName": "BlogEventExchanger"
