--- a/SearchService.WebApi/appsettings.json
+++ b/SearchService.WebApi/appsettings.json
@@ -7,20 +7,20 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "Issuer": "localhost", //后续要改为服务器ip
+    "Issuer": "47.109.141.21", //后续要改为服务器ip
     "Audience": "*",
     "key": "AnAnBaiBai_Love_Forever_dcsdciujewfcwiue_BaiBaiAnAn",
     "ExpireSeconds": "600"
   },
   "RabbitMqOptions": {
     "Port": 5672,
-    "HostName": "localhost",
+    "HostName": "47.109.141.21",
     "UserName": "admin",
     "Password": "15550239",
     "ExchangerName": "BlogEventExchanger"
   },
   "ElasticSearchOptions": {
-    "Uri": "http://localhost:9200",
+    "Uri": "http://47.109.141.21:9200",
     "UserName": "elastic",
     "Password": "15550239"
   }
