--- a/IdentityService.WebApi/Properties/launchSettings.json
+++ b/IdentityService.WebApi/Properties/launchSettings.json
@@ -37,7 +37,9 @@
         "ASPNETCORE_HTTP_PORTS": "5211"
       },
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "httpPort": 5211,
+      "sslPort": 7171
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
