--- a/SearchService.WebApi/Properties/launchSettings.json
+++ b/SearchService.WebApi/Properties/launchSettings.json
@@ -33,11 +33,13 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "7172",
-        "ASPNETCORE_HTTP_PORTS": "5212"
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
       },
       "publishAllPorts": true,
       "useSSL": true
+      //"httpPort": 5212,
+      //"sslPort": 7172
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
