--- a/ChatService.WebApi/Properties/launchSettings.json
+++ b/ChatService.WebApi/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7197;http://localhost:5130"
+      "applicationUrl": "https://192.168.2.117:7197;http://192.168.2.117:5130"
     },
     "IIS Express": {
       "commandName": "IISExpress",
