--- a/IdentityService.WebApi/Properties/launchSettings.json
+++ b/IdentityService.WebApi/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5092"
+      "applicationUrl": "http://192.168.2.117:5092"
     },
     "https": {
       "commandName": "Project",
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7084;http://localhost:5092"
+      "applicationUrl": "https://192.168.2.117:7084;http://192.168.2.117:5092"
     },
     "IIS Express": {
       "commandName": "IISExpress",
