添加点赞事件

--- a/BlogService.WebApi/appsettings.json
+++ b/BlogService.WebApi/appsettings.json
@@ -21,7 +21,8 @@
     "Password": "15550239",
     "ExchangerName": "BlogEventExchanger"
   },
-  "UserServer": "http://132.232.108.176:5217",//RPC内部调用
+  //"UserServer": "http://132.232.108.176:5217",//RPC内部调用
+  "UserServer": "http://localhost:5217",
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http1AndHttp2"
